force-app/main/default/objects/conference360__Badge_Printing_Configuration__c/conference360__Badge_Printing_Configuration__c.object-meta.xml
<CustomObject>
    <description>Configure how event badges should be printed.</description>
    <label>Badge Printing Configuration</label>
    <nameField>
        <label>Badge Printing Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Printing Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>