force-app/main/default/objects/conference360__Badge_Printing_Configuration__c/fields/conference360__Length_Unit__c.field-meta.xml
<CustomField>
    <fullName>conference360__Length_Unit__c</fullName>
    <description>The unit of measurement for the page height and width.</description>
    <inlineHelpText>The unit of measurement for the page height and width.</inlineHelpText>
    <label>Length Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inch</fullName>
            </value>
            <value>
                <fullName>Millimeter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>