force-app/main/default/objects/conference360__Badge_Printing_Configuration__c/fields/conference360__Orientation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Orientation__c</fullName>
    <description>The orientation to print the badge on.</description>
    <inlineHelpText>The orientation to print the badge on.</inlineHelpText>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Portrait</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>