force-app/main/default/objects/conference360__Badge_Printing_Configuration__c/fields/conference360__Page_Width__c.field-meta.xml
<CustomField>
    <fullName>conference360__Page_Width__c</fullName>
    <description>The width of the paper being printed on.</description>
    <inlineHelpText>The width of the paper being printed on.</inlineHelpText>
    <label>Page Width</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>