force-app/main/default/objects/conference360__Badge_Printing_Configuration__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Length_Unit__c</columns>
    <columns>conference360__Orientation__c</columns>
    <columns>conference360__Page_Height__c</columns>
    <columns>conference360__Page_Width__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>